--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
   height: 0;
 }
 h1 {
+  margin-top: 5rem;
   font-family: brandon-grotesque, sans-serif;
   font-weight: 500;
   font-size: 3.3rem;
