--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ h1 {
   margin-top: 5rem;
   font-family: brandon-grotesque, sans-serif;
   font-weight: 500;
-  font-size: 3.3rem;
+  font-size: 4rem;
   font-style: italic;
   text-align: center;
 }
@@ -45,9 +45,9 @@ h1 > span {
 h2 {
   text-align: center;
   font-family: brandon-grotesque, sans-serif;
-font-weight: 500;
-font-style: normal;
-font-size: 1.6rem;
+  font-weight: 500;
+  font-size: 1.8rem;
+  font-style: normal;
 }
 
 #email-address {
@@ -90,3 +90,64 @@ input[type="submit"] {
   font-size: 1.6rem;
   
 }
+
+
+
+@media (max-width: 850px) {
+  h1 {
+    font-size: 2rem;
+  }
+  h1 > span {
+    display: block;
+    text-transform: uppercase;
+    font-size: 3rem;
+    font-family: brandon-grotesque, sans-serif;
+    font-weight: 900;
+    font-style: normal;
+    display: block;
+  }
+}
+
+
+
+
+@media (max-width: 500px) {
+  h1 {
+    font-size: 1.8rem;
+  }
+  h1 > span {
+    display: block;
+    text-transform: uppercase;
+    font-size: 2rem;
+    font-family: brandon-grotesque, sans-serif;
+    font-weight: 900;
+    font-style: normal;
+    display: block;
+  }
+  h2 {
+    font-size: 1.4rem;
+  }
+}
+
+
+
+
+@media (max-width: 350px) {
+  h1 {
+    font-size: 1.8rem;
+  }
+  h1 > span {
+    display: block;
+    text-transform: uppercase;
+    font-size: 1.8rem;
+    font-family: brandon-grotesque, sans-serif;
+    font-weight: 900;
+    font-style: normal;
+    display: block;
+  }
+  h2 {
+    font-size: 1rem;
+  }
+}
+
+
